--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,10 @@ html {
     resize: none; 
   }
 
+  .mh-300{
+    min-height: 300px;
+  }
+
   .list-group {
     overflow-y:scroll;
     overflow-x:hidden;
